update en.ymlfor spell mistake
Read More spell mistake corrected

--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -251,7 +251,7 @@ en:
     total_views: 'Total Views'
     select_a_country: 'Select A Country'
     select_a_category: 'Select A Category'
-    read_more: 'Reade More'
+    read_more: 'Read More'
     load_more: 'Load More'
     learn_more: 'Learn More'
     idea_details: 'IDEA DETAILS'
