Update es.yml for spell correction
Read More spell corrected.

--- a/config/locales/es.yml
+++ b/config/locales/es.yml
@@ -249,7 +249,7 @@ es:
     total_views: 'Vistas totales'
     select_a_country: 'Seleccione un país'
     select_a_category: 'Seleccione una categoría'
-    read_more: 'Reade Más'
+    read_more: 'Read Más'
     load_more: 'Carga más'
     learn_more: 'Aprende más'
     idea_details: 'DETALLES IDEA'
